Fix the BookmarkBoard overflow layout

--- a/src/client/css/BookmarkBoard.scss
+++ b/src/client/css/BookmarkBoard.scss
@@ -24,11 +24,14 @@
 
 .bookmarkBoard-content {
   width: 36%;
-  min-height: 100vh;
+  height: calc(100% - #{$main-bar-height});
   padding: 28px;
+  padding-bottom: 0;
   background: #fff;
   position: absolute;
   right: 0;
+  display: flex;
+  flex-flow: column;
 }
 
 .bookmarkBoard-inputSection {
@@ -45,6 +48,12 @@
   transform: scale(1.5);
   cursor: pointer !important;
   pointer-events: auto !important;
+}
+
+.bookmark-list {
+  flex: 1;
+  overflow-y: auto;
+  padding-bottom: 28px;
 }
 
 .bookmark-item {
@@ -74,6 +83,7 @@
 
   .bookmarkBoard-content {
     padding: 18px 8px;
+    padding-bottom: 0;
   }
 
   .bookmark-removeItemBtn {
